# items_based_journal_erpnext

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
items_based_journal/: hooks.py  modules.txt
items_based_journal/fixtures/: client_script.json  custom_field.json  report.json
items_based_journal/public/js/: items_based_journal.bundle.js
