[project]
name = "items_based_journal"
version = "1.0.0"
description = "Add Item selection to Journal Entry with auto account population"
authors = [{name = "iffisays", email = "iffisays@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
